footer-two-running

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -265,33 +265,33 @@
     <!-- Contact section end --> 
 
     <!-- Address section  start-->
-    <section class="bg-neutral-0 py-120">
+    <section class="bg-neutral-0 lg:pt-14 pt-12 xl:pb-18 pb-14">
       <div class="cont grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="fade_anim rounded-2xl text-center">
-          <div class="bg-green-500 text-neutral-0 px-8 py-4 rounded-t-2xl">
+        <div class="fade_anim text-center">
+          <div class="bg-green-300 text-neutral-0 px-8 py-4">
             <h4>Harmony Wellness Center</h4>
           </div>
-          <div class="bg-green-50 rounded-b-2xl px-8 py-6 space-y-4">
+          <div class="bg-green-50 px-8 py-6 space-y-4">
             <p>123 Harmony Street, New York, NY</p>
             <p>+1 212 555 8901</p>
             <p>headoffice@wellhub.com</p>
           </div>
         </div>
-        <div data-delay=".3" class="fade_anim rounded-2xl text-center">
-          <div class="bg-green-500 text-neutral-0 px-8 py-4 rounded-t-2xl">
+        <div data-delay=".3" class="fade_anim text-center">
+          <div class="bg-green-300 text-neutral-0 px-8 py-4">
             <h4>Regional Branch</h4>
           </div>
-          <div class="bg-green-50 rounded-b-2xl px-8 py-6 space-y-4">
+          <div class="bg-green-50 px-8 py-6 space-y-4">
             <p>456 Balance Road, Pacific Heights, LA 90210</p>
             <p>+1 212 555 8901</p>
             <p>branch@wellhub.com</p>
           </div>
         </div>
-        <div data-delay=".6" class="fade_anim rounded-2xl text-center">
-          <div class="bg-green-500 text-neutral-0 px-8 py-4 rounded-t-2xl">
+        <div data-delay=".6" class="fade_anim  text-center">
+          <div class="bg-green-300 text-neutral-0 px-8 py-4">
             <h4>Support Center</h4>
           </div>
-          <div class="bg-green-50 rounded-b-2xl px-8 py-6 space-y-4">
+          <div class="bg-green-50 px-8 py-6 space-y-4">
             <p>789 Recovery Lane, Midwest Town, CH 60601</p>
             <p>+1 212 555 8901</p>
             <p>support@wellhub.com</p>
@@ -301,175 +301,113 @@
     </section>
     <!-- Address section  end-->
 
-    <!-- map section  start-->
-    <section class="bg-neutral-0">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d930.5652802926488!2d-99.47934957339103!3d42.73674642691413!2m3!1f0!2f78.25848549631186!3f0!3m2!1i1024!2i768!4f35!5e1!3m2!1sen!2sbd!4v1739866762496!5m2!1sen!2sbd"
-        width="100%"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </section>
-    <!-- map section  end-->
-
-    <!-- instagram image section start -->
-    <section>
-      <div class="swiper instagramImgSlider">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-1.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+    <!-- Footer section start -->
+    <footer class="bg-neutral-20 relative overflow-hidden z-[1]">
+      <div class="newsletter-one relative after:absolute after:top-0 xl:after:w-[50%] lg:after:w-[54%] after:w-[100%] after:h-full after:end-0 after:bg-green-300">
+        <div class="cont grid grid-cols-12 z-[2] lg:text-start text-center lg:py-16 py-12 relative border-b border-neutral-40">
+          <div class="col-span-12 lg:col-span-6 xl:col-span-6 lg:mb-0 mb-5">
+            <h2 class="h1 reveal_anim lg:mb-3 mb-2 lg:text-neutral-900 text-neutral-0">Subscribe Our Newsletter</h2>
+            <p class="md:text-lg text-base lg:text-gray-800 text-neutral-0">Get the latest deals and offers right to your inbox.</p>
           </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-2.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="col-span-12 lg:col-span-6 xl:col-span-6 flex lg:justify-end justify-center items-center">
+            <form class="fade_anim p-1 flex items-center bg-[rgba(255,255,255,0.04)] rounded-full border-[1px] border-[rgba(255,255,255,0.16)] sm:w-[477px]">
+              <input type="email" placeholder="Email Address" class="py-2 pl-6 w-full text-neutral-10 bg-transparent placeholder:text-neutral-40" />
+              <button class="py-4 px-8 rounded-full bg-yellow-200 font-semibold">Subscribe</button>
+            </form>
           </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-3.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="cont grid grid-cols-12 lg:gap-4 gap-7 relative z-[2] pb-12 xl:pb-20 pt-120">
+        <div class="col-span-12 sm:col-span-6 lg:col-span-4 reveal_anim" data-reveal-from="right">
+          <img src="./assets/images/logo.png" class="mb-4" alt="" />
+          <p class="mb-6 max-w-[348px] md:text-lg text-base text-neutral-400">Welcome to WellHub, your space for healing, growth, and personalized mental health support.</p>
+          <div class="flex items-center gap-2 lg:mb-10 md:mb-8 sm:mb-6 mb-5">
+            <a href="#" aria-label="social site link" class="social-icon two">
+              <i class="hgi-stroke hgi-facebook-01"></i>
+            </a>
+            <a href="#" aria-label="social site link" class="social-icon two">
+              <i class="hgi-stroke hgi-twitter-square"></i>
+            </a>
+            <a href="#" aria-label="social site link" class="social-icon two">
+              <i class="hgi-stroke hgi-instagram"></i>
+            </a>
+            <a href="#" aria-label="social site link" class="social-icon two">
+              <i class="hgi-stroke hgi-youtube"></i>
+            </a>
           </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-4.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="flex items-center gap-4">
+            <img src="assets/images/sponsor/visa.png" alt="img">
+            <img src="assets/images/sponsor/shopify.png" alt="img">
+            <img src="assets/images/sponsor/mastercard.png" alt="img">
+            <img src="assets/images/sponsor/paypal.png" alt="img">
           </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-2.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+        </div>
+        <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-2 reveal_anim">
+          <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Quick Links</p>
+          <ul class="space-y-4">
+            <li><a href="index.html" class="link xxl:text-lg text-base" >Home</a></li>
+            <li><a href="about.html" class="link xxl:text-lg text-base" >About Us</a></li>
+            <li><a href="about.html" class="link xxl:text-lg text-base" >Services</a></li>
+            <li><a href="blogs.html" class="link xxl:text-lg text-base" >Blogs</a></li>
+            <li><a href="#0" class="link xxl:text-lg text-base" >Shop</a></li>
+            <li><a href="#0" class="link xxl:text-lg text-base" >Contact Us</a></li>
+          </ul>
+        </div>
+        <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
+          <div>
+            <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Services</p>
+            <ul class="space-y-4">
+              <li><a href="index.html" class="link xxl:text-lg text-base" >Physiotherapy</a></li>
+              <li><a href="index.html" class="link xxl:text-lg text-base" >Rehabilitation Center</a></li>
+              <li><a href="index.html" class="link xxl:text-lg text-base" >Massage Therapy</a></li>
+              <li><a href="index.html" class="link xxl:text-lg text-base" >Group Therapy</a></li>
+              <li><a href="index.html" class="link xxl:text-lg text-base" >Chiropractic Care</a></li>
+              <li><a href="index.html" class="link xxl:text-lg text-base" >Psychological Counseling</a></li>
+            </ul>
           </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-1.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+        </div>
+        <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
+          <div>
+            <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Address</p>
+            <ul class="space-y-4">
+              <li>
+                <a href="index.html" class="flex items-center gap-2" >
+                  <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-mail-01 text-green-300"></i></span>
+                  <span class="xxl:text-lg text-base text-neutral-400">support@wellhub.com</span>
+                </a>
+              </li>
+              <li>
+                <a href="index.html" class="flex items-center gap-2" >
+                  <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-location-06 text-green-300"></i></span>
+                  <span class="xxl:text-lg text-base text-neutral-400">123 Wellness Street,
+                    Health City, CA 45678</span>
+                </a>
+              </li>
+              <li>
+                <a href="index.html" class="flex items-center gap-2" >
+                  <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-calling text-green-300"></i></span>
+                  <span class="xxl:text-lg text-base text-neutral-400">+1 234 567 8901</span>
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-3.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./assets/images/photo-4.webp" class="w-full" alt="instagram image" />
-                </div>
-                <div class="flip-card-back">
-                  <div class="bg-green-500 h-full p-5 md:p-10 flex flex-col items-center text-neutral-0">
-                    <i class="hgi-stroke hgi-instagram text-yellow-200 text-4xl"></i>
-                    <h2 class="mt-4 mb-7 xl:mb-10">Follow Our Instagram</h2>
-                    <span class="w-20 h-0.5 bg-yellow-200 block mb-7 xl:mb-10"></span>
-                    <p class="text-sm mb-1">Make a Call:</p>
-                    <a href="#" class="text-2xl font-semibold">+1 (555) 123-4567</a>
-                  </div>
-                </div>
-              </div>
+        </div>
+      </div>
+      <div class="py-4 xl:py-6 border-t border-neutral-40">
+        <div class="cont">
+          <div class="grid sm:flex sm:justify-between justify-center gap-y-2 sm:gap-y-0">
+            <p>Copyright © <span id="year"></span> <a href="index.html" class="text-green-500 font-semibold underline">WellHub</a> All Rights Reserved</p>
+            <div class="flex sm:justify-start justify-center gap-x-3 md:gap-x-5">
+              <a href="privacy-policy.html" class="link">Privacy Policy</a>
+              <a href="terms-conditions.html" class="link">Terms & Conditions</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- instagram image section end -->
-
-    <!-- Footer section start -->
-    <include-footer />
+      <!-- ele -->
+      <img src="assets/images/element/dots-ele.png" alt="img" class="absolute start-0 top-[180px] updown z-[-1] xxl:block hidden">
+      <img src="assets/images/element/flower-circle.png" alt="img" class="absolute max-w-[250px] end-[-80px] top-[290px] circle z-[-1]">
+    </footer>
     <!-- Footer section end -->
   </body>
 </html>
