--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="assets/fonts/hugeicon.min.css" />
     <link rel="stylesheet" href="./assets/css/swiper.min.css" />
     <link rel="stylesheet" href="./assets/css/glightbox.css" />
-    <link rel="stylesheet" href="./assets/libs/slim-select/slim-select.min.css" />
     <title>Contact Us - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
@@ -302,20 +301,34 @@
     <!-- Address section  end-->
 
     <!-- Footer section start -->
-    <footer class="bg-neutral-20 relative overflow-hidden z-[1]">
-      <div class="newsletter-one relative after:absolute after:top-0 xl:after:w-[50%] lg:after:w-[54%] after:w-[100%] after:h-full after:end-0 after:bg-green-300">
-        <div class="cont grid grid-cols-12 z-[2] lg:text-start text-center lg:py-16 py-12 relative border-b border-neutral-40">
-          <div class="col-span-12 lg:col-span-6 xl:col-span-6 lg:mb-0 mb-5">
-            <h2 class="h1 reveal_anim lg:mb-3 mb-2 lg:text-neutral-900 text-neutral-0">Subscribe Our Newsletter</h2>
-            <p class="md:text-lg text-base lg:text-gray-800 text-neutral-0">Get the latest deals and offers right to your inbox.</p>
+    <footer class="bg-neutral-20 pt-120 relative overflow-hidden z-[1]">
+      <div class="cont border-b border-neutral-40 lg:pb-14 pb-10">
+          <div class="flex justify-between md:flex-nowrap flex-wrap gap-5">
+              <div class="md:max-w-[637px] ">
+                <h2 class="h1 reveal_anim lg:mb-3 mb-2 text-neutral-900">Reach Out Anytime for Expert Support</h2>
+                <p class="xl:mb-8 lg:mb-6 mb-5 md:text-lg text-base text-gray-800">Our team is here to assist you with personalized care, expert guidance, and support whenever you need it.</p>
+                <a href="#0" type="submit" class="btn-primary">GET IN TOUCH<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+              </div>
+              <div class="md:max-w-[384px] w-full">
+                <h4 class="xl:mb-5 lg:mb-4 mb-4">Operational Hour</h4>
+                <ul class="flex flex-col gap-3">
+                  <li class="flex items-center justify-between">
+                    <span class="uppercase text-neutral-400 xxl:text-lg xl:text-base text-sm">Monday - Friday</span>
+                    <span class="uppercase text-neutral-400 xxl:text-lg xl:text-base text-sm">07AM - 11PM</span>
+                  </li>
+                  <li class="border-b border-neutral-40"></li>
+                  <li class="flex items-center justify-between">
+                    <span class="uppercase text-neutral-400 xxl:text-lg xl:text-base text-sm">SATURDAY:</span>
+                    <span class="uppercase text-neutral-400 xxl:text-lg xl:text-base text-sm">09AM - 10PM</span>
+                  </li>
+                  <li class="border-b border-neutral-40"></li>
+                  <li class="flex items-center justify-between">
+                    <span class="uppercase text-neutral-400 xxl:text-lg xl:text-base text-sm">SUNBDAY:</span>
+                    <span class="uppercase text-neutral-400 xxl:text-lg xl:text-base text-sm">CLOSED</span>
+                  </li>
+                </ul>
+              </div>
           </div>
-          <div class="col-span-12 lg:col-span-6 xl:col-span-6 flex lg:justify-end justify-center items-center">
-            <form class="fade_anim p-1 flex items-center bg-[rgba(255,255,255,0.04)] rounded-full border-[1px] border-[rgba(255,255,255,0.16)] sm:w-[477px]">
-              <input type="email" placeholder="Email Address" class="py-2 pl-6 w-full text-neutral-10 bg-transparent placeholder:text-neutral-40" />
-              <button class="py-4 px-8 rounded-full bg-yellow-200 font-semibold">Subscribe</button>
-            </form>
-          </div>
-        </div>
       </div>
       <div class="cont grid grid-cols-12 lg:gap-4 gap-7 relative z-[2] pb-12 xl:pb-20 pt-120">
         <div class="col-span-12 sm:col-span-6 lg:col-span-4 reveal_anim" data-reveal-from="right">
@@ -366,30 +379,19 @@
             </ul>
           </div>
         </div>
-        <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
+        <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim xs:me-0 me-4">
           <div>
-            <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Address</p>
-            <ul class="space-y-4">
-              <li>
-                <a href="index.html" class="flex items-center gap-2" >
-                  <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-mail-01 text-green-300"></i></span>
-                  <span class="xxl:text-lg text-base text-neutral-400">support@wellhub.com</span>
-                </a>
-              </li>
-              <li>
-                <a href="index.html" class="flex items-center gap-2" >
-                  <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-location-06 text-green-300"></i></span>
-                  <span class="xxl:text-lg text-base text-neutral-400">123 Wellness Street,
-                    Health City, CA 45678</span>
-                </a>
-              </li>
-              <li>
-                <a href="index.html" class="flex items-center gap-2" >
-                  <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-calling text-green-300"></i></span>
-                  <span class="xxl:text-lg text-base text-neutral-400">+1 234 567 8901</span>
-                </a>
-              </li>
-            </ul>
+            <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Newsletter</p>
+            <p class="text-base text-neutral-900 xl:mb-8 mb-6">Stay informed with cargolog by subscribing to our newsletter.</p>
+            <form action="#0" class="fade_anim bg-neutral-0 border border-neutral-40 flex items-center justify-between p-2">
+              <div class="flex items-center gap-2 ps-3">
+                  <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M19 0.5H1C0.801088 0.5 0.610322 0.579018 0.46967 0.71967C0.329018 0.860322 0.25 1.05109 0.25 1.25V14C0.25 14.3978 0.408035 14.7794 0.68934 15.0607C0.970644 15.342 1.35218 15.5 1.75 15.5H18.25C18.6478 15.5 19.0294 15.342 19.3107 15.0607C19.592 14.7794 19.75 14.3978 19.75 14V1.25C19.75 1.05109 19.671 0.860322 19.5303 0.71967C19.3897 0.579018 19.1989 0.5 19 0.5ZM18.25 14H1.75V2.95531L9.49281 10.0531C9.63118 10.1801 9.81217 10.2506 10 10.2506C10.1878 10.2506 10.3688 10.1801 10.5072 10.0531L18.25 2.95531V14Z" fill="#505255"/>
+                  </svg>                  
+                  <input type="email" placeholder="Enter Email.." class="border-none py-3 w-full text-neutral-900 bg-transparent placeholder:text-neutral-900 border border-neutral-40 rounded-full" />
+              </div>
+              <button type="submit" class="w-[46px] h-[46px] min-w-[46px] flex items-center justify-center bg-green-300 hover:bg-green-500 duration-300"><i class="hgi hgi-stroke hgi-arrow-up-right-01 duration-300 text-xl text-neutral-0"></i></button>
+            </form>
           </div>
         </div>
       </div>
@@ -405,8 +407,9 @@
         </div>
       </div>
       <!-- ele -->
-      <img src="assets/images/element/dots-ele.png" alt="img" class="absolute start-0 top-[180px] updown z-[-1] xxl:block hidden">
-      <img src="assets/images/element/flower-circle.png" alt="img" class="absolute max-w-[250px] end-[-80px] top-[290px] circle z-[-1]">
+      <img src="assets/images/element/dots-ele.png" alt="img" class="absolute start-0 bottom-[140px] updown z-[-1] xxl:block hidden">
+      <img src="assets/images/element/flower-circle.png" alt="img" class="absolute max-w-[250px] end-[-80px] bottom-[220px] circle z-[-1]">
+      <img src="assets/images/element/footer-ele.png" alt="img" class="absolute xxl:block hidden start-[-0px] top-[150px] z-[-1]">
     </footer>
     <!-- Footer section end -->
   </body>
