link-issue-done

--- a/src/shop-details.html
+++ b/src/shop-details.html
@@ -550,7 +550,7 @@
                     </div>
                     <div class="xl:py-8 py-6 xxl:px-8 xl:px-6 px-5 border border-neutral-40 border-t-0">
                       <div class="flex items-center justify-between flex-wrap gap-3 xl:mb-3 mb-3">
-                          <h4 class="font-playfair"><a href="#0" class="text-neutral-900 font-playfair">Massage Roller</a></h4>
+                          <h4 class="font-playfair"><a href="shop-details.html" class="text-neutral-900 font-playfair">Massage Roller</a></h4>
                           <div class="flex gap-1 items-center">
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
@@ -562,7 +562,7 @@
                       <p class="text-neutral-400 xxl:text-lg text-base xl:mb-6 mb-4">
                         A portable tool for deep tissue massage, easing tension and improving circulation.
                       </p>
-                      <a href="#0" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
+                      <a href="shop-details.html" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
                         $129 USD
                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M1 7.5H15M15 7.5L9 13.5M15 7.5L9 1.5" stroke="#090C10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -585,7 +585,7 @@
                     </div>
                     <div class="xl:py-8 py-6 xxl:px-8 xl:px-6 px-5 border border-neutral-40 border-t-0">
                       <div class="flex items-center justify-between flex-wrap gap-3 xl:mb-3 mb-3">
-                          <h4 class="font-playfair"><a href="#0" class="text-neutral-900 font-playfair">Wellness Tea</a></h4>
+                          <h4 class="font-playfair"><a href="shop-details.html" class="text-neutral-900 font-playfair">Wellness Tea</a></h4>
                           <div class="flex gap-1 items-center">
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
@@ -597,7 +597,7 @@
                       <p class="text-neutral-400 xxl:text-lg text-base xl:mb-6 mb-4">
                         A herbal blend that promotes relaxation and supports overall wellness with every sip.
                       </p>
-                      <a href="#0" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
+                      <a href="shop-details.html" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
                         $40 USD
                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M1 7.5H15M15 7.5L9 13.5M15 7.5L9 1.5" stroke="#090C10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -620,7 +620,7 @@
                     </div>
                     <div class="xl:py-8 py-6 xxl:px-8 xl:px-6 px-5 border border-neutral-40 border-t-0">
                       <div class="flex items-center justify-between flex-wrap gap-3 xl:mb-3 mb-3">
-                          <h4 class="font-playfair"><a href="#0" class="text-neutral-900 font-playfair">Heat Pack</a></h4>
+                          <h4 class="font-playfair"><a href="shop-details.html" class="text-neutral-900 font-playfair">Heat Pack</a></h4>
                           <div class="flex gap-1 items-center">
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
@@ -632,7 +632,7 @@
                       <p class="text-neutral-400 xxl:text-lg text-base xl:mb-6 mb-4">
                         A therapeutic heat pack that helps relax muscles and reduce pain and stiffness.
                       </p>
-                      <a href="#0" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
+                      <a href="shop-details.html" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
                         $180 USD
                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M1 7.5H15M15 7.5L9 13.5M15 7.5L9 1.5" stroke="#090C10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -655,7 +655,7 @@
                     </div>
                     <div class="xl:py-8 py-6 xxl:px-8 xl:px-6 px-5 border border-neutral-40 border-t-0">
                       <div class="flex items-center justify-between flex-wrap gap-3 xl:mb-3 mb-3">
-                          <h4 class="font-playfair"><a href="#0" class="text-neutral-900 font-playfair">Massage Roller</a></h4>
+                          <h4 class="font-playfair"><a href="shop-details.html" class="text-neutral-900 font-playfair">Massage Roller</a></h4>
                           <div class="flex gap-1 items-center">
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
@@ -667,7 +667,7 @@
                       <p class="text-neutral-400 xxl:text-lg text-base xl:mb-6 mb-4">
                         A portable tool for deep tissue massage, easing tension and improving circulation.
                       </p>
-                      <a href="#0" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
+                      <a href="shop-details.html" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
                         $129 USD
                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M1 7.5H15M15 7.5L9 13.5M15 7.5L9 1.5" stroke="#090C10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -690,7 +690,7 @@
                     </div>
                     <div class="xl:py-8 py-6 xxl:px-8 xl:px-6 px-5 border border-neutral-40 border-t-0">
                       <div class="flex items-center justify-between flex-wrap gap-3 xl:mb-3 mb-3">
-                          <h4 class="font-playfair"><a href="#0" class="text-neutral-900 font-playfair">Wellness Tea</a></h4>
+                          <h4 class="font-playfair"><a href="shop-details.html" class="text-neutral-900 font-playfair">Wellness Tea</a></h4>
                           <div class="flex gap-1 items-center">
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
@@ -702,7 +702,7 @@
                       <p class="text-neutral-400 xxl:text-lg text-base xl:mb-6 mb-4">
                         A herbal blend that promotes relaxation and supports overall wellness with every sip.
                       </p>
-                      <a href="#0" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
+                      <a href="shop-details.html" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
                         $40 USD
                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M1 7.5H15M15 7.5L9 13.5M15 7.5L9 1.5" stroke="#090C10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -725,7 +725,7 @@
                     </div>
                     <div class="xl:py-8 py-6 xxl:px-8 xl:px-6 px-5 border border-neutral-40 border-t-0">
                       <div class="flex items-center justify-between flex-wrap gap-3 xl:mb-3 mb-3">
-                          <h4 class="font-playfair"><a href="#0" class="text-neutral-900 font-playfair">Heat Pack</a></h4>
+                          <h4 class="font-playfair"><a href="shop-details.html" class="text-neutral-900 font-playfair">Heat Pack</a></h4>
                           <div class="flex gap-1 items-center">
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
                               <span class="text-yellow-300 text-xl"><i class="hgi hgi-stroke hgi-star"></i></span>
@@ -737,7 +737,7 @@
                       <p class="text-neutral-400 xxl:text-lg text-base xl:mb-6 mb-4">
                         A therapeutic heat pack that helps relax muscles and reduce pain and stiffness.
                       </p>
-                      <a href="#0" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
+                      <a href="shop-details.html" class="flex items-center gap-2 xl:text-lg text-base text-neutral-900 xl:font-semibold font-medium">
                         $180 USD
                         <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M1 7.5H15M15 7.5L9 13.5M15 7.5L9 1.5" stroke="#090C10" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
