--- a/src/404.html
+++ b/src/404.html
@@ -7,24 +7,21 @@
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="assets/fonts/hugeicon.min.css">
     <title>404 Error - WellHub - Physiotherapy &amp; Psychology Rehabilitation HTML Theme</title>
   </head>
 
   <body>
     <!-- Main Content -->
-    <main class="py-12 xl:py-24 flex justify-center min-h-screen">
+    <main class="py-12 xl:py-24 flex justify-center min-h-screen relative">
       <div class="container flex flex-col items-center text-center px-3">
-        <img src="./assets/images/error.webp" class="mb-10 xl:mb-14" alt="" />
+        <img src="./assets/images/element/error-thumb.png" class="mb-10 xl:mb-14" alt="" />
         <h1 class="mb-3">Oops...</h1>
         <p class="mb-5 xl:mb-9 text-neutral4/80">Our team is here to assist you with personalized care, expert guidance, and support whenever you need it.</p>
-        <a href="index.html" class="btn-primary pr-4 xl:!pr-6 !py-3"
-          >Back to Home
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="currentColor" fill="none">
-            <path d="M20.0001 11.9998L4.00012 11.9998" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            <path d="M15.0003 17C15.0003 17 20.0002 13.3176 20.0002 12C20.0002 10.6824 15.0002 7 15.0002 7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-        </a>
+        <a href="index.html" class="btn-primary">Back To Home <i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
       </div>
+      <!-- ele  -->
+      <img src="assets/images/element/error-ele.png" alt="img" class="absolute lg:block hidden updown end-[40px] bottom-[250px]">
     </main>
   </body>
 </html>
