--- a/src/shop-details.html
+++ b/src/shop-details.html
@@ -46,6 +46,7 @@
 
             <ul class="dropdown-menu">
               <li><a class="menu-link" href="services.html">Service</a></li>
+              <li><a class="menu-link" href="service-plan.html">Service Plan</a></li>
               <li><a class="menu-link" href="service-details.html">Service Details</a></li>
             </ul>
           </li>
