--- a/src/index.html
+++ b/src/index.html
@@ -1169,6 +1169,7 @@
           <img src="assets/images/contact/faq1.png" alt="img" class="w-full h-full">
         </div>
       </div>
+      <img src="assets/images/element/flower-circle.png" alt="img" class="absolute top-[180px] circle start-[-140px] max-w-[300px] xl:block hidden">
     </section>
     <!-- Faq section end -->
 
