--- a/src/faqs.html
+++ b/src/faqs.html
@@ -309,19 +309,19 @@
     <!-- Faq section end -->
 
     <!-- Testimonial section srart -->
-    <section class="relative py-120 bg-neutral-20 z-[1]">
+    <section class="relative py-120 bg-neutral-20 z-[1] overflow-hidden">
       <div class="cont">
         <div class="mb-8 lg:mb-10">
           <p class="sub-heading mb-4 fade_anim"><span class="bg-yellow-300 w-2 h-2 block rounded-full"></span> TESTIMONIALS</p>
           <h2 class="blur_anim">Our happy clients</h2>
         </div> 
-        <div class="grid items-center grid-cols-12 lg:gap-12 gap-8 pb-120">
-          <div class="col-span-7 relative">
+        <div class="grid items-center grid-cols-12 xl:gap-12 lg:gap-8 gap-6 pb-120">
+          <div class="lg:col-span-7 sm:col-span-8 col-span-12 relative">
             <div class="swiper testimonial-slidem">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div>
-                    <div class="flex items-center justify-between gap-2 xxl:mb-5 xl:mb-4 mb-4">
+                    <div class="flex flex-wrap items-center justify-between gap-2 xxl:mb-6 xl:mb-5 mb-5">
                       <div class="bg-neutral-0 font-medium inline-flex items-center justify-center rounded-full py-1 px-4 text-center text-base uppercase text-neutral-900">
                         JOINED 3 MONTH AGO
                       </div>
@@ -357,7 +357,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div>
-                    <div class="flex items-center justify-between gap-2 xxl:mb-5 xl:mb-4 mb-4">
+                    <div class="flex flex-wrap items-center justify-between gap-2 xxl:mb-6 xl:mb-5 mb-5">
                       <div class="bg-neutral-0 font-medium inline-flex items-center justify-center rounded-full py-1 px-4 text-center text-base uppercase text-neutral-900">
                         JOINED 3 MONTH AGO
                       </div>
@@ -393,7 +393,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex items-center gap-2 absolute end-0 bottom-4 z-[1]">
+            <div class="flex items-center gap-2 xs:absolute end-0 bottom-4 z-[1] xs:mt-0 mt-7">
               <button class="client-prev w-[46px] h-[46px] rounded-full text-xl f-center bg-neutral-0 border border-neutral-40 text-neutral-900 duration-300 hover:bg-green-300 hover:text-neutral-0 hover:border-green-300">
                 <i class="hgi hgi-stroke hgi-arrow-left-01"></i>
               </button>
@@ -402,8 +402,8 @@
               </button>
             </div>
           </div>
-          <div class="col-span-5">
-            <div class="relative max-w-[526px]">
+          <div class="lg:col-span-5 sm:col-span-4 col-span-12">
+            <div class="relative xs:max-w-[526px] max-w-[290px]">
               <img src="assets/images/testimonial/testimonial-zeta1.png" alt="img" class="rounded-full w-full">
               <div class="bg-yellow-300 rounded-full f-center xl:w-[100px] md:w-[70px] w-[50px] xl:h-[100px] md:h-[70px] h-[50px] absolute top-4 start-4">
                 <svg class="xl:w-[60px] md:w-[40px] w-[28px]" viewBox="0 0 52 38" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -470,6 +470,9 @@
         </div>
       </div>
       <img src="assets/images/element/footer-ele.png" alt="img" class="absolute xxl:block hidden start-[-0px] top-[150px] z-[-1]">
+      <img src="assets/images/element/testimonial-vector.png" alt="img" class="absolute top-14 start-[50%] circle z-[-1] xl:block hidden">
+      <img src="assets/images/element/testimonial-wallet.png" alt="img" class="absolute bottom-[120px] end-0 updown z-[-1] xl:block hidden">
+      <img src="assets/images/element/dots-ele.png" alt="img" class="absolute top-[60px] end-[-30px] updown z-[-1] xl:block hidden">
     </section>
     <!-- Testimonial section End -->
 
